--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -25,7 +25,7 @@
             <tr>
                 <td>{{ article[0] }}</td>
                 <td>{{ article[1] }}</td>
-                <td>{{ article[2] }}</td>
+                <td>{{ "{:,}".format(articulo[2]) }}</td>
             </tr>
             {% endfor %}
         </tbody>
