--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -12,6 +12,28 @@
 
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/dashboard">Mi Panel de Control</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register_user">Registrar Usuario</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/search_articulo">Buscar articulo <span class="sr-only"></span>(current)</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('logout') }}">Cerrar sesion</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <table class="table table-striped">
         <thead>
           <tr>
