arreglo de errores en el login main y resultados de productos

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -47,7 +47,7 @@
             <tr>
                 <td>{{ article[0] }}</td>
                 <td>{{ article[1] }}</td>
-                <td>{{ "{:,}".format(articulo[2]) }}</td>
+                <td>{{ "{:,}".format(article[2]) }}</td>
             </tr>
             {% endfor %}
         </tbody>
