menu con ul li bootstrap

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -33,6 +33,17 @@
                   </ul>
                 </div>
               </nav>
+              <ul class="list-group">
+                <li class="list-group-item">
+                  <a href="/search_articulo">Buscar Productos</a>
+                </li>
+                <li class="list-group-item">
+                  <a href="/register_user">Registrar Usuario</a>
+                </li>
+                <li class="list-group-item">
+                  <a  href="{{ url_for('logout') }}">Cerrar sesion</a>
+                </li>
+              </ul>
           </div>
           <div class="col-md-4">
             <!-- Barra lateral -->
