--- a/templates/search_articulo.html
+++ b/templates/search_articulo.html
@@ -6,9 +6,42 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/dashboard">Mi Panel de Control</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/dashboard">Home</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register_user">Registrar Usuario</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/search_articulo">Buscar articulo <span class="sr-only"></span>(current)</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('logout') }}">Cerrar sesion</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <form action="/search" method="get">
         <div class="form-group row">
             <label for="nombre" class="col-sm-2 col-form-label">Buscar articulo por Nombre:</label>
