--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/">Home</span></a>
+            <a class="nav-link" href="/dashboard">Home</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/register_user">Registrar Usuario</a>
